<resources>
    <string name="app_name">宇家</string>
    <string name="home_manager">物业管家</string>
    <string name="property_order">物业账单</string>
    <string name="property_life_money">生活缴费</string>
    <string name="property_repair">报事报修</string>
    <string name="property_express">快递收发</string>
    <string name="property_commercial">小区商户</string>
    <string name="property_home_service">家政服务</string>
    <string name="property_home_message">租房信息</string>
    <string name="property_decoration">装修</string>
    <string name="circle_title">圈子</string>
    <string name="i_will">我要报修</string>
    <string name="i_record">报修记录</string>
    <string name="repair_all">全部类型</string>
    <string name="repair_status">全部状态</string>
    <string name="repair_time">选择期望上门时间</string>
    <string name="repair_submit">提交</string>
    <string name="order_lookup">查询</string>
    <string name="repair_water">水电燃气</string>
    <string name="repair_house">房屋维修</string>
    <string name="repair_tree">公共设施</string>
    <string name="add">添加</string>
    <string name="complete">完成</string>
    <string name="select_city_title">城市选择</string>
    <string name="location_tv">定位城市</string>
    <string name="all_city">所有城市</string>
    <string name="order_message">您还没有小区信息</string>
    <string name="add_address">添加地址</string>
    <string name="order_edit_address">编辑</string>
    <string name="order_delete_address">删除</string>
    <string name="order_sure_delete_address">确定删除地址?</string>
    <string name="add_city">城&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;市</string>
    <string name="add_area">小&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;区</string>
    <string name="add_name">业主姓名</string>
    <string name="add_phone">手&#160;&#160;机&#160;&#160;号</string>
    <string name="add_person">乘坐人数</string>
    <string name="add_lou">小区楼号</string>
    <string name="add_ceng">楼&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;层</string>
    <string name="add_unit">单&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;元</string>
    <string name="add_hourse">房&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;号</string>
    <string name="money_msg">无信息</string>
    <string name="money_ele_tv">电费</string>
    <string name="money_water_tv">水费</string>
    <string name="money_ran_tv">燃气费</string>
    <string name="money_property_tv">物业费</string>
    <string name="money_add_area_tv">添加小区</string>
    <string name="money_record">缴费记录</string>
    <string name="money2_unit">缴费单位</string>
    <string name="money2_num">用户编号</string>
    <string name="input_money">请输入缴费金额</string>
    <string name="input_money_unit">缴费单位</string>
    <string name="input_money_num">客户编号</string>
    <string name="input_money_name">户名</string>
    <string name="input_money_address">用户地址</string>
    <string name="input_money_type">缴费类型</string>
    <string name="input_money_many">入表金额</string>
    <string name="input_money_submit">立即缴费</string>
    <string name="submit_sure_tv">确认付款</string>
    <string name="submit_select_tv">选择付款方式</string>
    <string name="submit_select_zhifubao">支付宝</string>
    <string name="submit_select_weixin">微信</string>
    <string name="circle_msg_title">友邻圈</string>
    <string name="circle_post_send">发布</string>
    <string name="circle_post_type">选择类型</string>
    <string name="circle_post_area">选择小区</string>
    <string name="circle_post_hint">内容...</string>
    <string name="circle_post_other_area">其他小区可看</string>
    <string name="comment_hint">说点什么...</string>
    <string name="comment_tv">评论...</string>
    <string name="circle_tag">标签</string>
    <string name="comment_send">发送</string>
    <string name="community_post_tv">发布</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="acti">创建活动</string>
    <string name="acti_2">社区活动</string>
    <string name="prompt">活动发布后暂不支持修改,请认真填写哦</string>
    <string name="community_title">活动标题</string>
    <string name="community_address">活动地址</string>
    <string name="community_person_num">人&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;数</string>
    <string name="community_phone">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话</string>
    <string name="community_content">活动内容...</string>
    <string name="car_jin">正在进行</string>
    <string name="car_end">已完成</string>
    <string name="car_shen">身份</string>
    <string name="car_time">出发时间</string>
    <string name="car_start_address">出发地</string>
    <string name="car_end_address">目的地</string>
    <string name="car_jie">接单</string>
    <string name="car_pin">社区拼车</string>
    <string name="car_post_prompt">活动发布后暂不支持修改,请认真填写哦</string>
    <string name="car_post_shen">身&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;份</string>
    <string name="car_post_end_address">目&#160;&#160;的&#160;&#160;地</string>
    <string name="car_post_start_address">出&#160;&#160;发&#160;&#160;地</string>
    <string name="car_post_siji">司机</string>
    <string name="car_post_chen">乘客</string>
    <string name="car_msg_comment">评论</string>
    <string name="car_comment_send">发表</string>
    <string name="express_shou">收快递</string>
    <string name="express_fa">发快递</string>
    <string name="express_prompt">提货码有效期为三天,失效后请到物业办公司处理。</string>
    <string name="express_state">物流状态</string>
    <string name="express_zi">自&#160;&#160;提&#160;&#160;柜</string>
    <string name="express_ma">提&#160;&#160;货&#160;&#160;码</string>
    <string name="express_from">承运来源</string>
    <string name="express_num">运单编号</string>
    <string name="change_address">切换地址</string>
    <string name="address_hos">历史地址</string>
    <string name="decoration_title">装修服务</string>
    <string name="decoration_ask">立即咨询</string>
    <string name="input_hint">请输入小区名</string>
    <string name="search_cancle">取消</string>
    <string name="city_hint">请输入城市名</string>
    <string name="area_hint">请输入小区名 如:名流一品</string>
    <string name="no_hint">未知城市或小区</string>
    <string name="look_msg">详情</string>
    <string name="look_price">租金</string>
    <string name="look_type">户型</string>
    <string name="look_m">面积</string>
    <string name="look_ceng">楼层:</string>
    <string name="look_direction">朝向:</string>
    <string name="look_configure">房屋配置:</string>
    <string name="look_house_btn">预约看房</string>
    <string name="look_call_alert">您本日还有6次房源机会，联系房东将会扣除1次，确认联系房东。</string>
    <string name="look_house_think">在考虑下</string>
    <string name="look_house_now">马上联系</string>
    <string name="house_post">出租</string>
    <string name="house_rent_type">出租方式</string>
    <string name="house_rent_type_all">整租</string>
    <string name="house_rent_type_other">合租</string>
    <string name="house_rent_area"><font color="#00eac6">*</font>区&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;域</string>
    <string name="house_rent_wo"><font color="#00eac6">*</font>卧&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;室</string>
    <string name="house_rent_name"><font color="#00eac6">*</font>小区名称</string>
    <string name="house_rent_huType"><font color="#00eac6">*</font>房屋户型</string>
    <string name="house_rent_m"><font color="#00eac6">*</font>房屋面积</string>
    <string name="house_rent_lou"><font color="#00eac6">*</font>楼&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;层</string>
    <string name="house_rent_direction"><font color="#00eac6">*</font>朝&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;向</string>
    <string name="house_rent_configure"><font color="#00eac6">*</font>房屋配置</string>
    <string name="house_rent_money"><font color="#00eac6">*</font>租&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;金</string>
    <string name="house_rent_add_img"><font color="#00eac6">*</font>添加照片</string>
    <string name="house_rent_phone_person"><font color="#00eac6">*</font>联&#160;&#160;系&#160;&#160;人</string>
    <string name="house_rent_phone_num"><font color="#00eac6">*</font>联系电话</string>
    <string name="house_rent_submit">提交</string>
    <string name="house_rent_hint_small_area">小区名称</string>
    <string name="house_shi">室</string>
    <string name="house_ting">厅</string>
    <string name="house_wei">卫</string>
    <string name="house_m">㎡</string>
    <string name="network">没有网络了\n去检查一下网络吧！</string>
    <string name="no_data">没有帖子哦</string>
    <string name="no_data_author">作者已删除!</string>
    <string-array name="homeSceneString">
        <item>回家</item>
        <item>离家</item>
        <item>起床</item>
        <item>睡觉</item>
        <item>休闲</item>
        <item>娱乐</item>
        <item>静音</item>
        <item>工作</item>
    </string-array>
    <string-array name="mode">
        <item>一键开启</item>
        <item>定时启动</item>
        <item>定位启动</item>
    </string-array>
    <string-array name="KM">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string-array name="M">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
        <item>600</item>
        <item>700</item>
        <item>800</item>
        <item>900</item>
    </string-array>
    <string-array name="week">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
        <item>全部</item>
    </string-array>
    <string-array name="tvString">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>切换</item>
        <item>0</item>
        <item>返回</item>
    </string-array>
    <string-array name="lockStr">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>メ</item>
        <item>0</item>
        <item>清除</item>
    </string-array>
    <string-array name="homeDeviceString">
        <item>客厅</item>
        <item>lim的卧室</item>
    </string-array>
    <string-array name="addressStr">
        <item>业主</item>
        <item>租客</item>
        <item>访客</item>
    </string-array>
    <string name="title_activity_home_device_add_wifi">HomeDeviceAddWifiActivity</string>
    <string name="homedeviceAddWifiErrorStr">可能出现的问题：\nwifi密码是否正确?\n您的网络是否可用?\n设备是否已经打开?\n联系我们：\n邮箱：wangyukeji</string>
    <string name="button_ok">OK</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the
        device.
    </string>
    <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
    <string name="scan_text">扫描设备二维码</string>
    <string name="contents_contact">Contact info</string>
    <string name="contents_email">Email address</string>
    <string name="contents_location">Geographic coordinates</string>
    <string name="contents_phone">Phone number</string>
    <string name="contents_sms">SMS address</string>
    <string name="contents_text">Plain text</string>
    <string name="preferences_vibrate">preferences_vibrate</string>
    <string name="preferences_play_beep">preferences_play_beep</string>
    <string name="preferences_actions_title">When a barcode is found\u2026</string>
    <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="preferences_decode_1D_title">1D barcodes</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_QR_title">QR Codes</string>
    <string name="preferences_play_beep_title">Beep</string>
    <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
</resources>