<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homefragmentFgbac"
    tools:context="com.home.wanyu.activity.OrderActivity">

    <RelativeLayout
        android:id="@+id/order_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/order_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:src="@mipmap/property_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/property_order"
            android:textColor="@color/title_color"
            android:textSize="17sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/order_no_address_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="186dp"
        android:src="@mipmap/order_no_address" />

    <TextView
        android:id="@+id/order_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_no_address_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/order_message"
        android:textColor="@color/homeFragChangeColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/add_address_btn"
        android:layout_width="325dp"
        android:layout_height="45dp"
        android:layout_below="@id/order_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/repair_submit_bg"
        android:gravity="center"
        android:text="@string/add_address"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>
