<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_life_money"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homefragmentFgbac"
    tools:context="com.home.wanyu.activity.LifeMoneyActivity">

    <RelativeLayout
        android:id="@+id/money_title"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/money_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:src="@mipmap/property_back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/property_life_money"
            android:textColor="@color/title_color"
            android:textSize="17sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/money_address_rl"
        android:layout_width="match_parent"
        android:layout_height="69.5dp"
        android:layout_below="@+id/money_title"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/money_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/order_address" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/money_img"
            android:text="@string/money_msg"
            android:textColor="@color/name_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/money_ele_rl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/money_address_rl"
        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/money_ele_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/money_ele_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/money_ele_img"
            android:text="@string/money_ele_tv"
            android:textColor="@color/title_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/money_water_rl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/money_ele_rl"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/money_water_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/money_water_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/money_water_img"
            android:text="@string/money_water_tv"
            android:textColor="@color/title_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/money_ran_rl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/money_water_rl"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/money_ran_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/money_ran_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/money_ran_img"
            android:text="@string/money_ran_tv"
            android:textColor="@color/title_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/money_property_rl"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/money_ran_rl"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/money_property_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/money_property_no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/money_property_img"
            android:text="@string/money_property_tv"
            android:textColor="@color/title_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/money_property_rl"
        android:background="@color/white">

        <Button
            android:id="@+id/money_add_area_submit"
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/repair_submit_bg"
            android:text="@string/add_address"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>
